<resources>
    <string name="app_name">Shophop</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in_with">Sign In with</string>
    <string name="lbl_forgot">Forgot ?</string>
    <string name="lbl_already_have_a_account">Already have a account?</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to
        -
    </string>
    <string name="lbl_tep_email">jonndeo@gmail.com</string>
    <string name="lbl_did_not_receive">Didn\'t receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_hi_we_re_woobox">Hi, We\'re Woobox!</string>
    <string name="lbl_subheading">We make around your city Affordable, easy and efficient.</string>
    <string name="lbl_my_order">My Order</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">Wishlist</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_newest_product">Newest Product</string>
    <string name="lbl_recent_search">Recent search</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_check_availability">Check Availability</string>
    <string name="lbl_delivery_by">Delivery By</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_colour">Colour</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_clouser">Clouser</string>
    <string name="lbl_lace_ups">Lace-ups</string>
    <string name="lbl_pattern">Pattern</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_80">80</string>
    <string name="lbl_4">4</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_more">More</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_brands">Brands</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_colors">Colors</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_less">Less</string>
    <string name="lbl_delivered_on">Delivered on</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_offer">Offer -</string>
    <string name="lbl_shipping_charge">Shipping Charge -</string>
    <string name="lbl_total_amount">Total Amount -</string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_order_date">Order Date -</string>
    <string name="lbl_give_ratings">Give Rating</string>
    <string name="lbl_rate_5">/5</string>
    <string name="lbl_delivery_status">Your Ordered Item has been Delivered</string>
    <string name="lbl_return_replace"><![CDATA[Return & Replace]]></string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_delivered_by">Delivery By,</string>
    <string name="lbl_change_address">Change Address</string>
    <string name="lbl_item_deliver_here">Item Deliver Here</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Pay with Debit/Credit Card</string>
    <string name="lbl_net_banking">Net Banking</string>
    <string name="lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="lbl_other_wallet">Other Wallet</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_new_arrival">New Arrival</string>
    <string name="lbl_popular">Popular</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">My Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_verify_now">Verify now</string>
    <string name="lbl_get_newest_offers">Get newest offers</string>
    <string name="lbl_please_verify_your_email_or_number">Please verify your email or number</string>
    <string name="lbl_next_time_buy">Next time buy</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_move_to_cart">Move to Cart</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_choose_item">Choose an item</string>
    <string name="lbl_tabDescription">Description</string>
    <string name="lbl_tab_more_info">More info</string>
    <string name="lbl_tabReviews">Reviews</string>
    <string name="lbl_qty">Qty:</string>
    <string name="lbl_see_price_detail">See Price Detail</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_remove_cart">Remove cart</string>
    <string name="lbl_logout_confirmation">Are you want to logout?</string>
    <string name="lbl_dialog_title">Confirmation</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no">NO</string>
    <string name="lbl_max">Max</string>
    <string name="lbl_min">Min</string>
    <string name="lbl_order">order</string>
    <string name="lbl_sign_up_with">Sign up with</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="msg_confirmation">Are you sure you want to delete?</string>
    <string name="error_no_internet">Oops!! You Are Not Connected To Internet</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_pwd_digit_required">Maximum 6 digit Required</string>
    <string name="error_enter_valid_email">Enter Valid Email</string>
    <string name="error_password_not_matches">Password not matches</string>
    <string name="error_gps_not_enabled">GPS location is not enabled.</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_permission_required">Location Permission Required</string>
    <string name="error_address_type">Please Select Address Type</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_state">State</string>
    <string name="hint_address_type">Address Type</string>
    <string name="hint_city">City</string>
    <string name="hint_pin_code">Pin code</string>
    <string name="hint_mobile_no">Phone number</string>
    <string name="text_start_to_shopping">Start to Shopping</string>
    <string name="text_todo">TODO</string>
    <string name="text_juliane_deerman">Juliane Deerman</string>
    <string name="text__02">00</string>
    <string name="text_121">$49</string>
    <string name="text__10">00</string>
    <string name="text_collection_2019">Collection 2019</string>
    <string name="text_499">$49</string>
    <string name="text_description">Blue solid woven regular top, has a round neck, three-quarter sleeves, stylised back
        Blue solid woven regular top, has a round neck, three-quarter sleeves, stylised back
    </string>
    <string name="text_25_jun_monday">25 Jun,Monday</string>
    <string name="text_black_colour">Black Colour</string>
    <string name="text_solid">Solid</string>
    <string name="text_airmix">Airmix</string>
    <string name="text_seller_johnshops">Seller- Johnshops</string>
    <string name="text_total_item_1">Total Item -</string>
    <string name="text_orderId">FG5356364566</string>
    <string name="text_date">24 Aug 2019</string>
    <string name="text_order_approved">Order Approved</string>
    <string name="text_item_delivered">Item Delivered</string>
    <string name="text_pin_code">386466</string>
    <string name="text_reward">There are many variations of passages of Lorem Ipsum available, but the majority have
        suffered alteration.
    </string>
    <string name="text_mobile">+91 9639639631</string>
    <string name="title_account">My Account</string>
    <string name="title_reward">My Rewards</string>
    <string name="title_payment">Payments</string>
    <string name="title_my_orders">My Orders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">My Cart</string>
    <string name="more">Read More</string>
    <string name="less">Read Less</string>
    <string name="order_summary">Order Summary</string>
    <string name="success">Successfully deleted</string>
    <string name="success_add">Successfully Added</string>
    <string name="send_to">Share with</string>
    <string name="hint_search">Search here</string>
    <string name="lbl_save_profile">Save Profile</string>
    <string name="lbl_change_pswd">Change Password</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_new_password">New Password</string>
    <string name="lbl_change_now">Change Now</string>
    <string name="hint_enter_your_contact_number">Enter your contact number</string>
    <string name="hint_enter_your_email_id">Enter your email id</string>
    <string name="lbl_send_mail">Send mail</string>
    <string name="lbl_email_to_woobox">Email to woobox</string>
    <string name="lbl_from">From</string>
    <string name="lbl_description">Description</string>
    <string name="hint_description_here">Description here</string>
    <string name="text_iqonicdesign_gmail_com">iqonicdesign@gmail.com</string>
    <string name="lbl_length">Length</string>
    <string name="lbl_width">Width</string>
    <string name="hint_enter_old_password">Old password</string>
    <string name="lbl_hop">hop</string>
    <string name="lbl_shop">Shop</string>
    <string name="reference_email">Johnduoe@gmail.com</string>
    <string name="lbl_0">$0</string>
    <string name="err_empty_cart">No items in your cart</string>
    <string name="lbl_shop_now">Shop Now</string>
</resources>