<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:ignore="MissingPrefix,UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_standard_new"
        android:paddingTop="@dimen/spacing_xxxlarge"
        android:paddingEnd="@dimen/spacing_standard_new"
        android:paddingBottom="@dimen/spacing_large">

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:contentDescription="@string/text_todo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_standard"
            android:src="@drawable/ic_app_icon" />

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_shop"

                android:textAppearance="@style/FontBold"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_size_xxlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_hop"
                android:textAppearance="@style/FontBold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_xxlarge"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:hint="@string/hint_email"
            android:autofillHints="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
             />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard"
            android:layout_marginTop="@dimen/spacing_smlarge"
            android:layout_marginEnd="@dimen/spacing_standard">

            <EditText
                android:id="@+id/edtPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:autofillHints="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvForget"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:paddingEnd="@dimen/spacing_middle"
                android:paddingStart="@dimen/spacing_control_half"
                android:text="@string/lbl_forgot"
                android:textAppearance="@style/FontSemiBold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_medium"
                android:theme="@style/Widget.MaterialComponents.Button.TextButton"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard"
            android:layout_marginTop="@dimen/spacing_mxlarge"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/lbl_sign_in"
            android:textAppearance="@style/FontMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/MaterialButtonStyle.Stroked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard"
            android:layout_marginTop="@dimen/spacing_standard"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:text="@string/lbl_sign_up"
            android:textAppearance="@style/FontMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_standard_new"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:text="@string/lbl_sign_in_with"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_small"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>