<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lay_button"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCart"
                style="@style/RecycleView"
                android:paddingTop="@dimen/spacing_standard_new"
                android:visibility="gone" />

            <include
                android:id="@+id/llPayment"
                layout="@layout/layout_paymentdetail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvNextTimeBuy"
                style="@style/Heading"
                android:layout_marginTop="@dimen/spacing_standard_new"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:text="@string/lbl_next_time_buy"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNextTimeBuy"
                style="@style/RecycleView"
                android:paddingTop="@dimen/spacing_standard_new" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/lay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_top_shadow"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llSeePriceDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_control">

            <TextView
                android:id="@+id/tvTotalCartAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_0"
                android:textAppearance="@style/FontSemiBold"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_size_normal"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_see_price_detail"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvContinue"
            style="@style/BottomButton.Primary"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/lbl_continue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNoItems"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCart"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/text_todo"
            android:src="@drawable/ic_cart_empty" />

        <TextView
            style="@style/Heading"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/err_empty_cart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShopNow"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_standard_new"
            android:text="@string/lbl_shop_now"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</RelativeLayout>